simplify install prefix

--- a/keyvi/src/cpp/keyvicompiler/SConscript
+++ b/keyvi/src/cpp/keyvicompiler/SConscript
@@ -30,6 +30,6 @@ keyvicompiler = localenv.Program(target = targetpath, source = source,
                                       LIBS = linklibraries)
 
 # installer
-usr_prefix = install_prefix
+prefix = install_prefix
 
-localenv.Alias("install", localenv.Install(os.path.join(usr_prefix, "bin"), keyvicompiler))
+localenv.Alias("install", localenv.Install(os.path.join(prefix, "bin"), keyvicompiler))
