try to fix C++11

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,17 @@ before_install:
   - sudo apt-get --no-install-recommends install doxygen # Don't install LaTeX stuffs
   - if [ "$CC" = "gcc" ] && [ "$CONF" = "debug" ]; then sudo pip install cpp-coveralls; export GCOV_FLAGS='--coverage'; fi
 
-install: true
+install:
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - gcc-4.8
+    - g++-4.8
+    - clang
 
 script:
   - cd keyvi
