--- a/.travis.yml
+++ b/.travis.yml
@@ -42,5 +42,6 @@ script:
   - scons mode=$CONF
   - $CONF/dictionaryfsa_unittests/dictionaryfsa_unittests
 
+sudo: false
 #after_success:
 #  - coveralls -r .. --gcov-options '\-lp' -e thirdparty -e example -e test -e build/CMakeFiles -e include/rapidjson/msinttypes -e include/rapidjson/internal/meta.h -e include/rapidjson/error/en.h
