--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ before_install:
   - if [ "$CC" = "gcc" ] && [ "$CONF" = "debug" ]; then sudo pip install cpp-coveralls; export GCOV_FLAGS='--coverage'; fi
 
 install:
-  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+  - update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+  - update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
 
 addons:
   apt:
@@ -46,6 +47,7 @@ addons:
     - libsnappy-dev
     - zlib1g-dev
     - doxygen
+    - libstdc++-4.8-dev
 
 script:
   - cd keyvi
