--- a/.travis.yml
+++ b/.travis.yml
@@ -36,15 +36,15 @@ addons:
     - scons
     - valgrind
     - cmake
-    - libboost-thread-55-dev
-    - libboost-system-55-dev
-    - libboost-test-55-dev
-    - libboost-55-dev
-    - libboost-date-time-55-dev
-    - libboost-regex-55-dev
-    - libboost-filesystem-55-dev
-    - libboost-program-options-55-dev
-    - libboost-iostreams-55-dev
+    - libboost-thread1.55-dev
+    - libboost-system1.55-dev
+    - libboost-test1.55-dev
+    - libboost1.55-dev
+    - libboost-date-time1.55-dev
+    - libboost-regex1.55-dev
+    - libboost-filesystem1.55-dev
+    - libboost-program-options1.55-dev
+    - libboost-iostreams1.55-dev
     - libsnappy-dev
     - zlib1g-dev
     - doxygen
