--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ addons:
 
 script:
   - cd keyvi
-  - scons mode=$CONF
+  - scons -j 2 mode=$CONF
   - $CONF/dictionaryfsa_unittests/dictionaryfsa_unittests
 
 sudo: true
