--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,6 @@ script:
   - scons -j 2 mode=$CONF
   - $CONF/dictionaryfsa_unittests/dictionaryfsa_unittests
 
-sudo: false
+sudo: true
 #after_success:
 #  - coveralls -r .. --gcov-options '\-lp' -e thirdparty -e example -e test -e build/CMakeFiles -e include/rapidjson/msinttypes -e include/rapidjson/internal/meta.h -e include/rapidjson/error/en.h
