set the C++ compiler in cmake

--- a/keyvi/SConstruct
+++ b/keyvi/SConstruct
@@ -78,7 +78,8 @@ env.SConsignFile()
     
 #build tpie dependency
 tpie = env.Command(["3rdparty/tpie/build/install/lib/libtpie.a","3rdparty/tpie/build/install/include/tpie/tpie.h"], "",
-            "cd 3rdparty/tpie && mkdir -p build && cd build && cmake -D CMAKE_BUILD_TYPE:STRING=Release -D CMAKE_INSTALL_PREFIX=install -D TPIE_PARALLEL_SORT=1 -D CMAKE_CXX_FLAGS=\"-fPIC -std=c++11\" .. && " +
+            "cd 3rdparty/tpie && mkdir -p build && cd build && cmake -D CMAKE_CXX_COMPILER=" + env["CXX"] +
+            " -D CMAKE_BUILD_TYPE:STRING=Release -D CMAKE_INSTALL_PREFIX=install -D TPIE_PARALLEL_SORT=1 -D CMAKE_CXX_FLAGS=\"-fPIC -std=c++11\" .. && " +
             "make -j " + str(GetOption('num_jobs')) + " && make install")
 
 env.Append(LIBPATH=[launch_dir + '/3rdparty/tpie/build/install/lib'])
