--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ script:
   - scons -j 4 mode=$CONF
   - $CONF/dictionaryfsa_unittests/dictionaryfsa_unittests
   - cd ../pykeyvi
-  - python setup.py build
+  - python setup.py build --mode $CONF
   - python setup.py install --user
   - py.test tests
   - cd ..
