add option to build with custom boost library

--- a/keyvi/SConstruct
+++ b/keyvi/SConstruct
@@ -30,6 +30,13 @@ AddOption('--prefix',
                   default='/usr/local',
                   help='installation prefix')
 
+AddOption('--boost-dir',
+                  dest='boost_dir',
+                  type='string',
+                  nargs=1,
+                  action='store',
+                  help='location of custom boost library')
+
 
 
 debugcompilerflags = ['-ggdb3']   #extra compile flags for debug
@@ -88,10 +95,17 @@ Export('env', 'buildmode', 'debugcompilerflags', 'releasecompilerflags', 'covera
 env.SConsignFile()
     
 #build tpie dependency
-tpie = env.Command(["3rdparty/tpie/build/install/lib/libtpie.a","3rdparty/tpie/build/install/include/tpie/tpie.h"], "",
-            "cd 3rdparty/tpie && mkdir -p build && cd build && cmake -D CMAKE_CXX_COMPILER=" + env["CXX"] +
-            " -D CMAKE_BUILD_TYPE:STRING=Release -D CMAKE_INSTALL_PREFIX=install -D TPIE_PARALLEL_SORT=1 -D CMAKE_CXX_FLAGS=\"-fPIC -std=c++11\" .. && " +
-            "make -j " + str(GetOption('num_jobs')) + " && make install")
+
+tpie_build_cmd = "cd 3rdparty/tpie && mkdir -p build && cd build && cmake -D CMAKE_CXX_COMPILER=" + env["CXX"]
+
+if boost_dir:
+    tpie_build_cmd += "export BOOST_ROOT={} && ".format(boost_dir)
+
+tpie_build_cmd += " -D CMAKE_BUILD_TYPE:STRING=Release -D CMAKE_INSTALL_PREFIX=install -D TPIE_PARALLEL_SORT=1 -D CMAKE_CXX_FLAGS=\"-fPIC -std=c++11\" .. && "
+tpie_build_cmd += "make -j " + str(GetOption('num_jobs')) + " && make install")
+
+
+tpie = env.Command(["3rdparty/tpie/build/install/lib/libtpie.a","3rdparty/tpie/build/install/include/tpie/tpie.h"], "", tpie_buld_cmd)
 
 env.Append(LIBPATH=[launch_dir + '/3rdparty/tpie/build/install/lib'])
 env.Clean(tpie, '3rdparty/tpie/build')
