--- a/keyvi/SConstruct
+++ b/keyvi/SConstruct
@@ -106,7 +106,7 @@ tpie_build_cmd += " -D CMAKE_BUILD_TYPE:STRING=Release -D CMAKE_INSTALL_PREFIX=i
 tpie_build_cmd += "make -j " + str(GetOption('num_jobs')) + " && make install"
 
 
-tpie = env.Command(["3rdparty/tpie/build/install/lib/libtpie.a","3rdparty/tpie/build/install/include/tpie/tpie.h"], "", tpie_buld_cmd)
+tpie = env.Command(["3rdparty/tpie/build/install/lib/libtpie.a","3rdparty/tpie/build/install/include/tpie/tpie.h"], "", tpie_build_cmd)
 
 env.Append(LIBPATH=[launch_dir + '/3rdparty/tpie/build/install/lib'])
 env.Clean(tpie, '3rdparty/tpie/build')
