--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ env:
 before_install:
   - pip install --user --download-cache $HOME/.pip-cache --use-wheel --install-option="--no-cython-compile" cython
   - pip install --user --download-cache $HOME/.pip-cache --use-wheel pytest
+  - pip install --user --download-cache $HOME/.pip-cache --use-wheel msgpack-python
   - if [ "$CC" = "gcc" ] && [ "$CONF" = "coverage" ]; then pip install --user --download-cache $HOME/.pip-cache --use-wheel coveralls-merge; fi
   - if [ "$CC" = "gcc" ] && [ "$CONF" = "coverage" ]; then pip install --user --download-cache $HOME/.pip-cache --use-wheel cpp-coveralls; fi
 
