--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
-    - llvm-toolchain-precise-3.6
+# disable, LLVM broken for now    - llvm-toolchain-precise-3.6
     - boost-latest
     packages:
     - gcc-4.8
