log unit test progress

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ addons:
 script:
   - cd keyvi
   - scons -j 4 mode=$CONF
-  - $CONF/dictionaryfsa_unittests/dictionaryfsa_unittests
+  - BOOST_TEST_LOG_LEVEL=all $CONF/dictionaryfsa_unittests/dictionaryfsa_unittests
   - cd ../pykeyvi
   - python setup.py build --mode $CONF
   - python setup.py install --user
