--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,8 @@ before_install:
   - if [ "$CC" = "gcc" ] && [ "$CONF" = "coverage" ]; then pip install --user --download-cache $HOME/.pip-cache --use-wheel coveralls-merge; fi
   - if [ "$CC" = "gcc" ] && [ "$CONF" = "coverage" ]; then pip install --user --download-cache $HOME/.pip-cache --use-wheel cpp-coveralls; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew uninstall boost          ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install boost --c++11   ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install snappy scons; fi
 
 install:
