--- a/.travis.yml
+++ b/.travis.yml
@@ -39,10 +39,12 @@ before_install:
   - pip install --user --download-cache $HOME/.pip-cache --use-wheel msgpack-python
   - if [ "$CC" = "gcc" ] && [ "$CONF" = "coverage" ]; then pip install --user --download-cache $HOME/.pip-cache --use-wheel coveralls-merge; fi
   - if [ "$CC" = "gcc" ] && [ "$CONF" = "coverage" ]; then pip install --user --download-cache $HOME/.pip-cache --use-wheel cpp-coveralls; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew uninstall boost          ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install boost --c++11   ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install snappy scons; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then 
+      brew update ;
+      brew uninstall boost ;
+      brew install boost --c++11 ;
+      brew install snappy scons;
+    fi
 
 install:
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
