--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ before_install:
       brew uninstall boost;
       wget 'https://github.com/hendrik-cliqz/travis-homebrew-bottle/releases/download/boost-1.61-cxx11/boost-1.61.0_1.mavericks.bottle.1.tar.gz';
       brew install boost-1.61.0_1.mavericks.bottle.1.tar.gz;
-      export PATH=$PATH:$HOME/library/python/2.7/bin/
+      export PATH=$PATH:$HOME/library/python/2.7/bin/;
     fi
 
 install:
